Add old miscellaneous core lib progress

--- a/apps/custom_server/CMakeLists.txt
+++ b/apps/custom_server/CMakeLists.txt
@@ -9,7 +9,9 @@ add_custom_command(
 
 add_executable(custom_server
         ${CMAKE_CURRENT_SOURCE_DIR}/src/main.c ${CMAKE_CURRENT_SOURCE_DIR}/src/pc99/serial.c
-        ${CMAKE_CURRENT_BINARY_DIR}/crt/arch-x86/crt0.s)
+        ${CMAKE_CURRENT_BINARY_DIR}/crt/arch-x86/crt0.s
+        src/alloc/cslot_ao.c src/alloc/cslot_ao.h src/alloc/mem_ao.c src/alloc/mem_ao.h
+        src/alloc/untyped.c src/alloc/untyped.h src/alloc/object.c src/alloc/object.h src/alloc/mem.c src/alloc/mem.h src/alloc/mem_slab.c src/alloc/mem_slab.h src/alloc/mem_page.c src/alloc/mem_page.h)
 target_link_libraries(custom_server sel4)
 target_link_libraries(custom_server -lgcc)
 
