--- a/apps/custom_server/CMakeLists.txt
+++ b/apps/custom_server/CMakeLists.txt
@@ -11,7 +11,7 @@ add_executable(custom_server
         ${CMAKE_CURRENT_SOURCE_DIR}/src/main.c ${CMAKE_CURRENT_SOURCE_DIR}/src/pc99/serial.c
         ${CMAKE_CURRENT_BINARY_DIR}/crt/arch-x86/crt0.s
         src/alloc/cslot_ao.c src/alloc/cslot_ao.h src/alloc/mem_ao.c src/alloc/mem_ao.h src/basic.h
-        src/alloc/untyped.c src/alloc/untyped.h src/alloc/object.c src/alloc/object.h src/alloc/mem_page.c src/alloc/mem_page.h src/errno.h src/errno.c src/destructor.c src/destructor.h)
+        src/alloc/untyped.c src/alloc/untyped.h src/alloc/object.c src/alloc/object.h src/alloc/mem_page.c src/alloc/mem_page.h src/errno.h src/errno.c src/alloc/mem_vspace.c src/alloc/mem_vspace.h src/alloc/mem_arena.c src/alloc/mem_arena.h src/alloc/mem_multislab.c src/alloc/mem_multislab.h src/alloc/mem_arena_ao.c src/alloc/mem_arena_ao.h src/alloc/mem_slab.c src/alloc/mem_slab.h src/alloc/mem_fx.c src/alloc/mem_fx.h)
 target_link_libraries(custom_server sel4)
 target_link_libraries(custom_server -lgcc)
 
