Begin writing elf loader

--- a/libs/libbedrock/CMakeLists.txt
+++ b/libs/libbedrock/CMakeLists.txt
@@ -8,10 +8,10 @@ add_custom_command(
         MAIN_DEPENDENCY ${CMAKE_CURRENT_SOURCE_DIR}/src/arch-x86/_start.S)
 
 # "exported" - used by other CMake scripts
-set(LIB_RESOURCE_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/include)
+set(LIB_BEDROCK_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
-add_library(bedrock STATIC ${LIB_RESOURCE_HEADERS}
+add_library(bedrock STATIC ${LIB_BEDROCK_HEADERS}
         src/errno.c src/assert.c src/buffer.c src/debug.c ${CMAKE_CURRENT_BINARY_DIR}/src/arch-x86/_start.s)
-target_include_directories(bedrock PUBLIC ${LIB_RESOURCE_HEADERS})
+target_include_directories(bedrock PUBLIC ${LIB_BEDROCK_HEADERS})
 target_link_libraries(bedrock sel4)
 target_link_libraries(bedrock -lgcc)
