Add basic inclusion code for ELF files

--- a/apps/init/CMakeLists.txt
+++ b/apps/init/CMakeLists.txt
@@ -1,5 +1,10 @@
 
-add_executable(init src/main.c src/serial.c src/serial.h)
+add_custom_command(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/helloworld_bin.c
+        COMMAND python2 ${CMAKE_CURRENT_SOURCE_DIR}/src/incbin.py $<TARGET_FILE:helloworld> image_helloworld
+        ${CMAKE_CURRENT_BINARY_DIR}/helloworld_bin.c
+        DEPENDS helloworld ${CMAKE_CURRENT_SOURCE_DIR}/src/incbin.py)
+
+add_executable(init src/main.c src/serial.c src/serial.h ${CMAKE_CURRENT_BINARY_DIR}/helloworld_bin.c)
 target_link_libraries(init bedrock)
 target_link_libraries(init resource)
 install(TARGETS init DESTINATION images)
