Add basic startup sequence to helloworld

--- a/apps/helloworld/CMakeLists.txt
+++ b/apps/helloworld/CMakeLists.txt
@@ -2,5 +2,6 @@
 add_executable(helloworld src/main.c)
 target_link_libraries(helloworld bedrock)
 target_link_libraries(helloworld resource)
+target_link_libraries(helloworld elfloader) # TODO: make this not be a dependency
 
 install(TARGETS helloworld DESTINATION images)
