Prefix 'lib' onto cmake libraries

--- a/apps/helloworld/CMakeLists.txt
+++ b/apps/helloworld/CMakeLists.txt
@@ -1,7 +1,7 @@
 
 add_executable(helloworld src/main.c)
-target_link_libraries(helloworld bedrock)
-target_link_libraries(helloworld resource)
-target_link_libraries(helloworld elfloader) # TODO: make this not be a dependency
+target_link_libraries(helloworld libbedrock)
+target_link_libraries(helloworld libresource)
+target_link_libraries(helloworld libelfloader) # TODO: make this not be a dependency
 
 install(TARGETS helloworld DESTINATION images)
