--- a/libs/libbedrock/CMakeLists.txt
+++ b/libs/libbedrock/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-get_property(SEL4_BEDROCK_INCLUDE_DIRECTORIES TARGET sel4 PROPERTY INTERFACE_INCLUDE_DIRECTORIES)
+get_property(SEL4_BEDROCK_INCLUDE_DIRECTORIES TARGET libsel4 PROPERTY INTERFACE_INCLUDE_DIRECTORIES)
 string(REPLACE ";" ";-I" SEL4_BEDROCK_INCLUDE ";${SEL4_BEDROCK_INCLUDE_DIRECTORIES}")
 add_custom_command(
         OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/src/arch-x86/_start.s
@@ -10,8 +10,8 @@ add_custom_command(
 # "exported" - used by other CMake scripts
 set(LIB_BEDROCK_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
-add_library(bedrock STATIC ${LIB_BEDROCK_HEADERS}
+add_library(libbedrock STATIC ${LIB_BEDROCK_HEADERS}
         src/errx.c src/assert.c src/buffer.c src/debug.c ${CMAKE_CURRENT_BINARY_DIR}/src/arch-x86/_start.s)
-target_include_directories(bedrock PUBLIC ${LIB_BEDROCK_HEADERS})
-target_link_libraries(bedrock sel4)
-target_link_libraries(bedrock -lgcc)
+target_include_directories(libbedrock PUBLIC ${LIB_BEDROCK_HEADERS})
+target_link_libraries(libbedrock libsel4)
+target_link_libraries(libbedrock -lgcc)
