--- a/libs/libelfloader/CMakeLists.txt
+++ b/libs/libelfloader/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-add_library(elfloader STATIC include src/elfparser.c src/elfloader.c src/elfexec.c)
-target_include_directories(elfloader PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
-target_link_libraries(elfloader bedrock)
-target_link_libraries(elfloader resource)
+add_library(libelfloader STATIC include src/elfparser.c src/elfloader.c src/elfexec.c)
+target_include_directories(libelfloader PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
+target_link_libraries(libelfloader libbedrock)
+target_link_libraries(libelfloader libresource)
