Separate out initalization logic into a new library

--- a/apps/helloworld/CMakeLists.txt
+++ b/apps/helloworld/CMakeLists.txt
@@ -1,7 +1,6 @@
 
 add_executable(helloworld src/main.c)
 target_link_libraries(helloworld libbedrock)
-target_link_libraries(helloworld libresource)
-target_link_libraries(helloworld libelfloader) # TODO: make this not be a dependency
+target_link_libraries(helloworld libinit)
 
 install(TARGETS helloworld DESTINATION images)
