--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -2,3 +2,4 @@ add_subdirectory("libsel4")
 add_subdirectory("libbedrock")
 add_subdirectory("libresource")
 add_subdirectory("libelfloader")
+add_subdirectory("libinit")
