Add basic libipc

--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -3,3 +3,4 @@ add_subdirectory("libbedrock")
 add_subdirectory("libresource")
 add_subdirectory("libelfloader")
 add_subdirectory("libinit")
+add_subdirectory("libipc")
