Change init <-> sandbox ipc to use libipc

--- a/apps/sandbox/CMakeLists.txt
+++ b/apps/sandbox/CMakeLists.txt
@@ -2,3 +2,4 @@
 add_executable(sandbox src/main.c)
 target_link_libraries(sandbox libbedrock)
 target_link_libraries(sandbox libinit)
+target_link_libraries(sandbox libipc)
