--- a/libs/libipc/CMakeLists.txt
+++ b/libs/libipc/CMakeLists.txt
@@ -2,3 +2,4 @@
 add_library(libipc STATIC include src/core.c)
 target_include_directories(libipc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 target_link_libraries(libipc libbedrock)
+target_link_libraries(libipc libresource)
