Split up init main.c

--- a/apps/init/CMakeLists.txt
+++ b/apps/init/CMakeLists.txt
@@ -1,6 +1,6 @@
 
 add_executable(init
-        src/main.c src/serial.c src/serial.h src/untyped.c src/untyped.h src/small.c src/small.h src/objectsrv.c)
+        src/main.c src/serial.c src/serial.h src/untyped.c src/untyped.h src/small.c src/small.h src/objectsrv.c src/init.c)
 embed_binary(sandbox image_sandbox init)
 target_link_libraries(init libbedrock)
 target_link_libraries(init libresource)
