Partition context execution across init and other servers

--- a/libs/libinit/CMakeLists.txt
+++ b/libs/libinit/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-add_library(libinit STATIC include src/init.c src/objectcli.c)
+add_library(libinit STATIC include src/init.c src/objectcli.c src/execcli.c)
 target_include_directories(libinit PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 target_link_libraries(libinit libbedrock)
 target_link_libraries(libinit libresource)
