Add basic registrar client test app

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -10,3 +10,4 @@ add_subdirectory("init")
 add_subdirectory("sandbox")
 add_subdirectory("helloworld")
 add_subdirectory("registrar")
+add_subdirectory("ioroot")
