Add basic hashmap implementation to registrar

--- a/apps/registrar/CMakeLists.txt
+++ b/apps/registrar/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-add_executable(registrar src/main.c)
+add_executable(registrar src/main.c src/hashmap.c src/hashmap.h)
 target_link_libraries(registrar libbedrock)
 target_link_libraries(registrar libinit)
 target_link_libraries(registrar libipc)
