Add close-to-original version of lua

--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -4,3 +4,4 @@ add_subdirectory("libresource")
 add_subdirectory("libelfloader")
 add_subdirectory("libinit")
 add_subdirectory("libipc")
+add_subdirectory("liblua")
