--- a/libs/libbedrock/CMakeLists.txt
+++ b/libs/libbedrock/CMakeLists.txt
@@ -11,7 +11,8 @@ add_custom_command(
 set(LIB_BEDROCK_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 add_library(libbedrock STATIC ${LIB_BEDROCK_HEADERS}
-        src/errx.c src/assert.c src/buffer.c src/debug.c ${CMAKE_CURRENT_BINARY_DIR}/src/arch-x86/_start.s)
+        src/errx.c src/assert.c src/buffer.c src/debug.c src/arch-x86/deepcall.s ${CMAKE_CURRENT_BINARY_DIR}/src/arch-x86/_start.s
+        src/math_pow.c src/math_floor.c src/libm.h src/math_fmod.c src/str10tod.c src/miscmath.c)
 target_include_directories(libbedrock PUBLIC ${LIB_BEDROCK_HEADERS})
 target_link_libraries(libbedrock libsel4)
 target_link_libraries(libbedrock -lgcc)
